--- a/src/Styles/Components/_Foreground.scss
+++ b/src/Styles/Components/_Foreground.scss
@@ -9,6 +9,7 @@
   height: 100%;
   width: 100%;
   z-index: 999;
+  transform: translateZ(30px);
 
   .masterCardWindow {
     width: 500px;
